Fix for bug #9992: mysql_next_result hangs on error     set net->no_send_error to 0 before execution of each element of     multiquery statement to provide the sending of error to client